--- a/README.org
+++ b/README.org
@@ -5,10 +5,13 @@
 
 * smp_sys
 
-Part of the sensorimotor primitives aka /smp/ ecosystem designed to
-cooperate with [[https://github.com/x75/smp_base][smp_base]] and [[https://github.com/x75/smp_graphs][smp_graphs]]. The /sys/ part stands for
-systems, where a system is anything that produces data. This can be a
-robot, or a logfile reader but also an economy or a social process.
+Part of the sensorimotor primitives (smp) ecosystem and designed to
+work together with [[https://github.com/x75/smp_base][smp_base]] and [[https://github.com/x75/smp_graphs][smp_graphs]]. The /sys/ bit stands for
+/systems/. In the smp context, a system is anything that produces data
+and usually that is a robot, a different robot, or a file reader but
+could also be a network feed (network monitoring, market data, social
+network channels, ...), a wireless sensor network, a smart home, and
+so on.
 
 ** Implemented systems
   - n-dimensional point mass (the simplest robot with motility,
